<resources>
    <string name="app_name">Pocket sommelier</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Путеводитель по винному миру</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="main_text_size">Размер текста</string>

    <string name="home_fragment">\t Вино — алкогольный напиток, история которого насчитывает уже несколько тысячелетий, а потому не удивительно, что в мире существует такое разнообразие вин. \n \n Мы расскажем о том, по какому принципу они классифицируются, в чем принципиальное отличие вин из разных регионов и как начать разбираться в вине без помощи сомелье.

\n \n Вина классифицируют по разным принципам. Основными ориентирами при этом являются: цвет, сорт винограда и регион происхождения, содержание сахара, углекислого газа и алкоголя.</string>

    <string name="menu_by_color">Цвет</string>
    <string name="red_wine">\t Красные вина

\n \n Под эту категорию подпадают вина рубинового, фиолетового, чернильного, бледно-алого, кирпичного и других оттенков, от светлого к темному, с пигментацией различного уровня насыщенности. Красные вина изготавливаются из темных сортов винограда. Оттенок приобретают благодаря красящим веществам в кожице и мякоти ягод, а также в процессе ферментации и выдержки.

\n \n Примечательно, что в отличие от белых вин, красные ферментируются вместе с кожицей винограда, а сама ферментация протекает при более высокой температуре, что позволяет извлечь из кожицы и мякоти больше красящих пигментов, танинов, ароматических веществ. Концентрация вкуса и цвета при этом сильно зависит от продолжительности ферментации. Так, при длительной ферментации, вино может иметь очень насыщенный и мощный вкус темных фруктов и кофе, а при непродолжительной — легкий букет с доминирующими ягодными нотками.

\n \n К популярным сортам винограда, из которого производят красное вино, относят: Каберне совиньон, Мерло, Пино нуар, Мальбек, Шираз, Зинфандель.

\n \n Что касается гастрономии, то молодые красные вина рекомендуют к белому мясу, птице или овощам на гриле. Более полнотелые сорта прекрасно сочетаются и с сытными блюдами: копченым мясом, стейком. Подавать красное вино следует в больших бокалах с широкой чашей, обеспечивающей лучшую оксидацию и позволяющей вину дышать.

</string>

    <string name="white_wine"> /t Белые вина

\n \n Вопреки названию, изготавливаются не только из белого, но иногда и из темного винограда. Обязательным условием при этом является отсутствие контакта виноградного сока с кожицей и мякотью — именно в них содержатся пигменты, дающие вину цвет. Исключение здесь составляют так называемые оранжевые вина, которые ферментируются, а иногда и выдерживаются вместе с кожицей (пример — грузинские вина квеври).

\n \n Белые вина, как и красные, могут отличаться оттенком: от лимонного с зеленым отливом до золотистого, от соломенного до янтарного. Цвет зависит от сорта винограда, региона, в котором ягоды были выращены (в прохладных странах виноград обычно менее пигментированный), а также от оксидации, выдержки в дубовой бочке (новой или старой), от того, применялась ли фильтрация и другие способы очистки вина.

\n \n В зависимости от производственных процессов белые вина могут быть очень легкими и свежими, с нотами лимона и зеленых яблок, либо же сочными, с характерными оттенками тропических фруктов, меда, карамели и ванили, поджаренных тостов и выпечки. К самым популярным белым винам относят Шардоне, Совиньон блан, Мускат, Рислинг и Пино гриджио.

\n \n К белым винам хорошо подходят морепродукты, рыба, сливочные и мягкие сыры, овощные салаты и белое нежирное мясо. Подавать белое вино лучше всего в высоких, не слишком широких бокалах на длинной ножке.
    </string>

    <string name="rose_wine">\t Розовые вина \n \n Cвой красивый оттенок розовые вина приобретают от непродолжительного контакта с кожицей темного винограда. Ферментация у таких вин обычно длится не более 12-36 часов. Примечательно, что в большинстве случаев в Европе смешивание белого и красного вина для получения тихого розового вина недопустимо, однако подобная технология применяется для изготовления игристых вин, в том числе и в провинции Шампань.

\n \n Розовые вина могут быть сухими и сладкими, а их вкус варьируется в зависимости от способа производства, продолжительности ферментации, сорта винограда. Зачастую на рынок вина попадают молодыми, без выдержки, а потому едиными для них характеристиками являются свежесть, насыщенность фруктового вкуса и отсутствие признаков оксидации.

\n \n Подают розовое вино с самыми легкими блюдами: рыбой, птицей, овощными закусками, десертами и свежими фруктами. Бокалы используются те же, что и для белых вин.
    </string>


    <string name="menu_by_sugar">Сладость</string>
    <string name="dry_wine2">Остаточный сахар — тот, что остался в вине после ферментации и выдержки. Это природный сахар, содержащийся в самом винограде. Его количество может отличаться в зависимости от сорта винограда — к примеру, у Муската его больше, чем у Шардоне. По содержанию остаточного природного сахара все вина можно поделить на две большие группы:

\n \n Столовые — от сухих до полусладких;
\n Десертные — от полусладких до сладких. \n </string>
    <string name="dry_wine">\t Сухие \n \n  Содержание сахара в них не превышает 4 граммов на литр. Иными словами, сахар был "высушен", съеден дрожжами в процессе ферментации. Любопытно, что большинство вин являются именно сухими.
    </string>
    <string name="semi_dry_and_semi_sweet_wine">\t Полусухие и полусладкие

\n \n Полусухие (до 18 г/л) и полусладкие (45 г/л) — промежуточное звено между сухими и сладкими. Сладость в них ощутима, но не является приторной.</string>
    <string name="sweet_wine">\t Сладкие

\n \n Вина с содержанием сахара выше 45 г/л. Производятся разными способами: путем остановки брожения, использования особых сортов винограда, в том числе заизюмленного, ботритизированного или прибитого морозом, а также из ягод позднего сбора. Примечательно, что шаптализация (добавление сахара в вино после ферментации) применяется лишь для массового производства дешевых вин, и в большинстве регионов Франции, Италии и Испании запрещена.

\n \n В отдельную категорию выделяются десертные вина. К ним относятся и полусладкие, и очень сладкие вина, в том числе и крепленые (херес, портвейн и т.д.). Свое название они получили от популярной гастрономической пары — десертов, с которой их обычно подают по завершению основной трапезы.</string>

    <string name="menu_carbon_dioxide">Содержание углакислого газа </string>
    <string name="menu_carbon_dioxide2">\t Наличие или отсутствие углекислого газа в бутылке позволяет делить вина на тихие и игристые.</string>
    <string name="quiet_wine">\t Тихие вина

\n \n Зачастую не содержат углекислого газа. Исключение — "зеленые" вина Виньо Верде, в которых может содержаться незначительное количество углекислого газа — естественного от малолактической ферментации, продолжающейся в бутылке, или же добавленного искусственным образом перед бутилированием вина.
    </string>
    <string name="sparkling_wine">\t Игристые вина \n \n Характеризуются наличием пузырьков углекислого газа. К ним относятся вина, изготовленные классическим методом шампенуаза со вторичным брожением в бутылке, а также те, что были произведены иными способами: по методу Шарма или Асти, путем добавления углекислого газа в готовое вино. К этой же категории относятся полуигристые и полушипучие вина: например, итальянские вина фризанте, у которых давление в бутылке меньше, чем у прочих игристых вин (1-2 бар против 3 бар у вин категории спуманте или французского шампанского).</string>

    <string name="menu_fortress">Содержание алкоголя</string>
    <string name="fortress_wine">\t По процентному содержанию алкоголя тихие, некрепленые (в те, что не добавлялся спирт или бренди) вина делятся на:

\n \n легкие — до 11% этилового спирта;
\n средние — 12-14% спирта;
\n крепкие — выше 14%.
\n \n В отдельный класс выделяются крепленые вина. К таковым относятся херес, портвейн, мадера, марсала. Содержание алкоголя в них превышает 15%. Достигается это путем добавления бренди или винного спирта для прерывания ферментации, либо же по ее завершению.</string>


    <string name="menu_grape_variety">Сорт винограда</string>
    <string name="menu_grape_variety2">\t Все вина делятся на две большие категории — моносортовые, из винограда одного сорта, и купажированные, из винограда двух и более сортов. К наиболее популярным сортам винограда, используемых для производства сортовых вин относят:</string>
    <string name="chardonnay">\t Шардоне

\n \n Белый виноград, один из самых распространенных в мире. Свою популярность получил, не в последнюю очередь, благодаря хорошей приспосабливаемости к самым разнообразным климатам. Шардоне культивируется и в прохладной Бургундии, и в солнечной Аргентине. При этом у бургундского вина в букете доминируют ноты зеленого яблока и цитрусовых, а у аргентинского — тропических фруктов и меда.</string>
    <string name="cabernet_sauvignon">\t Каберне совиньон \n \n Красный виноград, пользуется любовью благодаря насыщенности вкуса и аромата, высокой кислотности и танинности, а также великолепному потенциалу хранения. Лучшие моносортовые и ассамбляжные вина из Каберне совиньона производятся во Франции и Калифорнии.</string>
    <string name="merlot">\t Мерло \n \n Красный сорт винограда, из которого получаются бархатистые, мягкие вина с ярко выраженным ароматом сливы, темной вишни и кофе. Является ключевым на правом берегу Бордо, где расположено знаменитое на весь мир поместье Petrus.</string>
    <string name="sauvignon_blan">\t Совиньон блан \n \n Ароматичный белый сорт, из которого получаются великолепные молодые вина с высокой кислотностью и свежим ароматом яблок и цитрусовых, а иногда — крыжовника и спаржи. Лучшие Совиньоны производятся во французской Долине Луары (Пуйи-Фюме и Сансер) и новозеландской Долине Мальборо.</string>

    <string name="hi">Hi</string>
    <string name="menu_home">Основной экран</string>
    <string name="color2">\t Цвет — первое, на что обращают внимание при выборе вина. Именно цвет может многое рассказать о том, из какого винограда изготовлено вино, является ли оно молодым или выдержанным, подвергалось ли оксидации. По цвету вина делят на:</string>
</resources>