<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_color"
            android:icon="@drawable/baseline_wine_bar_24"
            android:title="@string/menu_by_color"/>
        <item
            android:id="@+id/nav_sugar"
            android:icon="@drawable/baseline_wine_bar_24"
            android:title="@string/menu_by_sugar" />
        <item
            android:id="@+id/nav_carbon_dioxide"
            android:icon="@drawable/baseline_wine_bar_24"
            android:title="@string/menu_carbon_dioxide" />
        <item
            android:id="@+id/nav_fortress"
            android:icon="@drawable/baseline_wine_bar_24"
            android:title="@string/menu_fortress"/>
        <item
            android:id="@+id/nav_grape_variety"
            android:icon="@drawable/baseline_wine_bar_24"
            android:title="@string/menu_grape_variety"/>
    </group>
</menu>